Resources/Parsers/action/actionParser.js
// Generated from C:/Users/megam/jupyter_ops/Resources/Parsers/action/action.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import actionListener from './actionListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class actionParser extends antlr4.Parser {

    static grammarFileName = "action.g4";
    static literalNames = [ null, "'MODULE'", "'DEFINE'", "','", "'TYPE'", 
                            "'CARD'", "'CHAR'", "'BYTE'", "'INT'", "'POINTER'", 
                            "'ARRAY'", "'('", "')'", "'@'", "'^'", "'.'", 
                            "'RETURN'", "'PROC'", "'FUNC'", "'==+'", "'==-'", 
                            "'EXIT'", "'IF'", "'THEN'", "'FI'", "'ELSEIF'", 
                            "'ELSE'", "'DO'", "'OD'", "'UNTIL'", "'WHILE'", 
                            "'FOR'", "'TO'", "'STEP'", null, "'='", null, 
                            null, null, null, null, null, null, null, "'*'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, "MULTOP", "EQ", "FUNDTYPE", "SPECIALOP", 
                             "RELOP", "ADDOP", "UNARYOP", "IDENTIFIER", 
                             "NUMCONST", "STRCONST", "MUL", "COMMENT", "WS" ];
    static ruleNames = [ "file_", "program", "progmodule", "systemdecls", 
                         "definedecl", "deflist", "def", "typedecl", "typeerecidentlist", 
                         "typerecident", "recname", "fieldinit", "vardecl", 
                         "basevardecl", "funddecl", "basefunddecl", "fundtype", 
                         "fundidentlist", "fundident", "initopts", "addr", 
                         "value", "pointerdecl", "ptrtype", "ptridentlist", 
                         "ptrident", "arraydecl", "arridentlist", "arrident", 
                         "dim", "arrinitopts", "arrayvalue", "recorddecl", 
                         "recidentlist", "recident", "address", "memreference", 
                         "memcontents", "fundref", "arrref", "ptrref", "recref", 
                         "routinelist", "routine", "procroutine", "procdecl", 
                         "funcroutine", "funcdecl", "routinecall", "params", 
                         "param", "paramdecl", "stmtlist", "stmt", "simpstmt", 
                         "strucstmt", "assignstmt", "exitstmt", "ifstmt", 
                         "elseifexten", "elseexten", "doloop", "untilstmt", 
                         "whileloop", "forloop", "start_", "finish_", "inc", 
                         "codeblock", "compconstlist", "condexp", "complexrel", 
                         "simprelexp", "arithexp", "multexp", "valuevalue", 
                         "compconst", "basecompconst" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = actionParser.ruleNames;
        this.literalNames = actionParser.literalNames;
        this.symbolicNames = actionParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 71:
    	    		return this.complexrel_sempred(localctx, predIndex);
    	case 73:
    	    		return this.arithexp_sempred(localctx, predIndex);
    	case 74:
    	    		return this.multexp_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    complexrel_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    arithexp_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 1:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    multexp_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 2:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	file_() {
	    let localctx = new File_Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, actionParser.RULE_file_);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 157;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 131574) !== 0) || _la===41) {
	            this.state = 156;
	            this.program();
	        }

	        this.state = 159;
	        this.match(actionParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, actionParser.RULE_program);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 169; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 162;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===1) {
	                this.state = 161;
	                this.match(actionParser.T__0);
	            }

	            this.state = 165; 
	            this._errHandler.sync(this);
	            var _alt = 1;
	            do {
	            	switch (_alt) {
	            	case 1:
	            		this.state = 164;
	            		this.progmodule();
	            		break;
	            	default:
	            		throw new antlr4.error.NoViableAltException(this);
	            	}
	            	this.state = 167; 
	            	this._errHandler.sync(this);
	            	_alt = this._interp.adaptivePredict(this._input,2, this._ctx);
	            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	            this.state = 171; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) === 0 && ((1 << _la) & 131574) !== 0) || _la===41);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	progmodule() {
	    let localctx = new ProgmoduleContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, actionParser.RULE_progmodule);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 176;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 173;
	                this.systemdecls(); 
	            }
	            this.state = 178;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
	        }

	        this.state = 179;
	        this.routinelist();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	systemdecls() {
	    let localctx = new SystemdeclsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, actionParser.RULE_systemdecls);
	    try {
	        this.state = 184;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 2:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 181;
	            this.definedecl();
	            break;
	        case 4:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 182;
	            this.typedecl();
	            break;
	        case 5:
	        case 6:
	        case 7:
	        case 8:
	        case 41:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 183;
	            this.vardecl();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	definedecl() {
	    let localctx = new DefinedeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, actionParser.RULE_definedecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 186;
	        this.match(actionParser.T__1);
	        this.state = 187;
	        this.deflist();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	deflist() {
	    let localctx = new DeflistContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, actionParser.RULE_deflist);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 189;
	        this.def();
	        this.state = 194;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===3) {
	            this.state = 190;
	            this.match(actionParser.T__2);
	            this.state = 191;
	            this.def();
	            this.state = 196;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	def() {
	    let localctx = new DefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, actionParser.RULE_def);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 197;
	        this.match(actionParser.IDENTIFIER);
	        this.state = 198;
	        this.match(actionParser.EQ);
	        this.state = 199;
	        this.match(actionParser.STRCONST);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	typedecl() {
	    let localctx = new TypedeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, actionParser.RULE_typedecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 201;
	        this.match(actionParser.T__3);
	        this.state = 202;
	        this.typeerecidentlist();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	typeerecidentlist() {
	    let localctx = new TypeerecidentlistContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, actionParser.RULE_typeerecidentlist);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 205; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 204;
	        		this.typerecident();
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 207; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,7, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	typerecident() {
	    let localctx = new TyperecidentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, actionParser.RULE_typerecident);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 209;
	        this.recname();
	        this.state = 210;
	        this.match(actionParser.EQ);
	        this.state = 212; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 211;
	        		this.fieldinit();
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 214; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,8, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	recname() {
	    let localctx = new RecnameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, actionParser.RULE_recname);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 216;
	        this.match(actionParser.IDENTIFIER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fieldinit() {
	    let localctx = new FieldinitContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, actionParser.RULE_fieldinit);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 218;
	        this.funddecl();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	vardecl() {
	    let localctx = new VardeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, actionParser.RULE_vardecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 221; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 220;
	        		this.basevardecl();
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 223; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,9, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	basevardecl() {
	    let localctx = new BasevardeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, actionParser.RULE_basevardecl);
	    try {
	        this.state = 229;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,10,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 225;
	            this.funddecl();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 226;
	            this.pointerdecl();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 227;
	            this.arraydecl();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 228;
	            this.recorddecl();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funddecl() {
	    let localctx = new FunddeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, actionParser.RULE_funddecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 232; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 231;
	        		this.basefunddecl();
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 234; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,11, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	basefunddecl() {
	    let localctx = new BasefunddeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, actionParser.RULE_basefunddecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 236;
	        this.fundtype();
	        this.state = 237;
	        this.fundidentlist();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fundtype() {
	    let localctx = new FundtypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, actionParser.RULE_fundtype);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 239;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 480) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fundidentlist() {
	    let localctx = new FundidentlistContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, actionParser.RULE_fundidentlist);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 241;
	        this.fundident();
	        this.state = 246;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===3) {
	            this.state = 242;
	            this.match(actionParser.T__2);
	            this.state = 243;
	            this.fundident();
	            this.state = 248;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fundident() {
	    let localctx = new FundidentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, actionParser.RULE_fundident);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 249;
	        this.match(actionParser.IDENTIFIER);
	        this.state = 252;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===35) {
	            this.state = 250;
	            this.match(actionParser.EQ);
	            this.state = 251;
	            this.initopts();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	initopts() {
	    let localctx = new InitoptsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, actionParser.RULE_initopts);
	    try {
	        this.state = 260;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,15,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 254;
	            this.addr();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 256; 
	            this._errHandler.sync(this);
	            var _alt = 1;
	            do {
	            	switch (_alt) {
	            	case 1:
	            		this.state = 255;
	            		this.value();
	            		break;
	            	default:
	            		throw new antlr4.error.NoViableAltException(this);
	            	}
	            	this.state = 258; 
	            	this._errHandler.sync(this);
	            	_alt = this._interp.adaptivePredict(this._input,14, this._ctx);
	            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	addr() {
	    let localctx = new AddrContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, actionParser.RULE_addr);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 262;
	        this.compconst();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	value() {
	    let localctx = new ValueContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, actionParser.RULE_value);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 264;
	        this.match(actionParser.NUMCONST);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	pointerdecl() {
	    let localctx = new PointerdeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 44, actionParser.RULE_pointerdecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 266;
	        this.ptrtype();
	        this.state = 267;
	        this.match(actionParser.T__8);
	        this.state = 268;
	        this.ptridentlist();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ptrtype() {
	    let localctx = new PtrtypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 46, actionParser.RULE_ptrtype);
	    try {
	        this.state = 272;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 5:
	        case 6:
	        case 7:
	        case 8:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 270;
	            this.fundtype();
	            break;
	        case 41:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 271;
	            this.recname();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


